--- a/views/product/index.pug
+++ b/views/product/index.pug
@@ -15,7 +15,7 @@ block content
       if product != ''
         each item in product 
           tr 
-            td= item.id 
+            td= item._id 
             td= item.name 
             td= item.price 
             td= item.quantity
