--- a/views/product/index.pug
+++ b/views/product/index.pug
@@ -2,28 +2,44 @@ extends ../layout.pug
 block content 
   h3 
     a(href='/product/create') Create new Product 
+  
   h1 List Products 
-  table 
-    thead 
-      tr
-        th ID 
-        th Name 
-        th Price 
-        th Quantity
-        th Image
-        th Action 
-    tbody 
-      if product != ''
-        each item in product 
-          tr 
-            td= item._id 
-            td= item.name 
-            td= item.price 
-            td= item.quantity
-            td
-              img(src=`/images/${item.image}`, alt="")
-            td Delete
-      else
-        tr 
-          td(colspan='5') Not Data    
+  if product != ''
+    div.list_item
+      each item in product
+        div.box_item
+          div.item
+            div.box_image
+              img(src=`/images/${item.image}`)
+            div.box_content
+              p.name= item.name
+              div.box_price
+                p.price Price #{item.price}
+                p.quantity Quantity #{item.quantity}
+  else 
+    div Not Data 
+
+  //- table 
+  //-   thead 
+  //-     tr
+  //-       th ID 
+  //-       th Name 
+  //-       th Price 
+  //-       th Quantity
+  //-       th Image
+  //-       th Action 
+  //-   tbody 
+  //-     if product != ''
+  //-       each item in product 
+  //-         tr 
+  //-           td= item._id 
+  //-           td= item.name 
+  //-           td= item.price 
+  //-           td= item.quantity
+  //-           td
+  //-             img(src=`/images/${item.image}`, alt="")
+  //-           td Delete
+  //-     else
+  //-       tr 
+  //-         td(colspan='5') Not Data    
           
