--- a/views/product/index.pug
+++ b/views/product/index.pug
@@ -3,7 +3,10 @@ block content
   h3 
     a(href='/product/create') Create new Product 
   
-  h1 List Products 
+  h1 List Products
+  div 
+    input(type="text") 
+    
   if product != ''
     div.list_item
       each item in product
@@ -14,8 +17,25 @@ block content
             div.box_content
               p.name= item.name
               div.box_price
-                p.price Price #{item.price}
-                p.quantity Quantity #{item.quantity}
+                p.price #{item.price} đ
+                p.quantity Quantity: #{item.quantity}
+           
+              div.box_btn
+                a(href=`/product/delete/:${item._id}`)
+                  button.delete.btn Delete
+                a(href=`/product/update/:${item._id}`)
+                  button.edit.btn Update
+              .review 
+                .box_view
+                  p.view 2340view
+                .boxstar
+                  i.fa-solid.fa-star
+                  i.fa-solid.fa-star
+                  i.fa-solid.fa-star
+                  i.fa-solid.fa-star
+                  i.fa-solid.fa-star
+                  i (5)
+                
   else 
     div Not Data 
 
