--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/item.css')
+    <script src="https://kit.fontawesome.com/7707bc9338.js" crossorigin="anonymous"></script>
   body
     block content
