--- a/public/stylesheets/item.css
+++ b/public/stylesheets/item.css
@@ -12,7 +12,7 @@
   font-size: 1.2rem;
   font-weight: 1.1rem;
   color: white;
-  background-color: blue;
+  background-color: rgb(9, 105, 188);
   cursor: pointer;
   transition: 0.3s;
 }
