--- a/views/product/create.pug
+++ b/views/product/create.pug
@@ -1,18 +1,22 @@
 extends ../layout.pug
+
 block content 
-  h1 Create new Product 
-  form(action="/product/create" method="post"  enctype='multipart/form-data')
-    div 
-      label(for="name") Name
-      input(type="text" name='name')  
-    div 
-      label(for="price") Price
-      input(type="number" name='price') 
-    div 
-      label(for="quantity") Quantity
-      input(type="number" name='quantity')
-    div 
-      label(for="image") Image
-      input(type="file" name='image')  
-    div 
-      input(type="submit" value='Create')
+  div.container
+    div.row.justify-content-center
+      div.col-md-6
+        h1.text-center Create new Product 
+        form(action="/product/create" method="post" enctype='multipart/form-data')
+          div.form-group
+            label(for="name") Name
+            input.form-control(type="text" name='name')  
+          div.form-group
+            label(for="price") Price
+            input.form-control(type="number" name='price') 
+          div.form-group
+            label(for="quantity") Quantity
+            input.form-control(type="number" name='quantity')
+          div.form-group
+            label(for="image") Image
+            input.form-control-file(type="file" name='image')  
+          div.form-group.text-center
+            input.btn.btn-primary(type="submit" value='Create')
